[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "klotho"
version = "0.1.0"
description = "Klotho — orchestrate multiple LLMs (via Ollama Cloud) to draft, judge and synthesize a master plan. Viele Fäden, ein Plan."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "questionary>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
klotho = "klotho.cli:app"
orchestrator = "klotho.cli:app"  # Alias für Rückwärtskompatibilität

[tool.setuptools.packages.find]
include = ["klotho*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"